gap final fix (I hope)

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10px;
+    padding: 5px 5px;
     background-color: #000;
 }
 
@@ -111,7 +111,7 @@ ul {
   text-decoration: none;
   color: #fff;
   font-size: 22px;
-  padding: 0.5rem 1rem;
+  padding: 0.25rem 0.5rem;
   position: relative;
 }
 
